fix(horizontal-slider): add `z-index` to navigation arrows

--- a/packages/horizontal-slider-theme/src/theme.css
+++ b/packages/horizontal-slider-theme/src/theme.css
@@ -26,6 +26,7 @@
   top: 35%;
   transition: opacity 150ms;
   width: 32px;
+  z-index: 1;
 }
 
 @media (hover: none) and (pointer: coarse) {
